gccida/c0/flow_loop_dump
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/flow_loop_dump/src/cfgloop.c:578:7: error: expected expression
if (  struct loop && loop->header ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/flow_loop_dump/src/cfgloop.c:582:7: error: use of undeclared identifier 'arg0'
v4 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/flow_loop_dump/src/cfgloop.c:583:7: error: use of undeclared identifier 'arg0'
v5 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/flow_loop_dump/src/cfgloop.c:599:7: error: use of undeclared identifier 'arg0'
v6 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/flow_loop_dump/src/cfgloop.c:600:7: error: use of undeclared identifier 'arg0'
v7 = &arg0; 
      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/flow_loop_dump/src/obj/cfgloop.o] Error 1
